--- a/style.css
+++ b/style.css
@@ -1,8 +1,32 @@
-#container {
+#wrapper {
+  margin: 0 auto;
+  width: 520px;
+  height: 520px;
+  border: 1px dotted;
+  background-color: black;
+}
+
+
+div.cell {
+  float: left;
+}
+
+.filled {
+  background-color: orange;
+}
+
+.red {
+  background-color: red;
+}
+
+button {
   position: relative;
-  margin-top: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  display: table;
-  
+  top: 10%;
+  left: 10%;
+  margin: 0;
+  height: 50px;
+  width: 100px;
+  font-size: 20px;
+  display: block;
+
 }
